Bug 2543 - Potential infinite recursion in signal handling
Summary: Potential infinite recursion in signal handling
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: 6.8.2
Hardware: x86 (IA32) Linux (All)
: high minor
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-14 22:44 UTC by Andrew Church
Modified: 2005-03-04 17:48 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch (444 bytes, patch)
2005-02-14 22:45 UTC, Andrew Church
no flags Details | Splinter Review
Patch for 2005-03-05-trunk (same as attachment #1905 + Changelog comment) (3.11 KB, patch)
2005-03-05 12:45 UTC, Roland Mainz
no flags Details | Splinter Review

Description Andrew Church 2005-02-14 22:44:44 UTC
xf86SignalHandler (hw/xfree86/common/xf86Events.c) resets the signal handler
before setting the flag indicating a signal has been caught, theoretically
allowing the possibility of infinite recursion--though admittedly I can't think
of a real-life case where this would happen.  Attaching a patch anyway just to
clean up the logic.
Comment 1 Andrew Church 2005-02-14 22:45:21 UTC
Created attachment 1905 [details] [review]
Patch
Comment 2 Roland Mainz 2005-03-02 07:44:54 UTC
Egbert:
Is the patch OK for you ?
Comment 3 Egbert Eich 2005-03-03 11:03:33 UTC
Yes, I guess that's OK.
Comment 4 Roland Mainz 2005-03-05 12:37:15 UTC
Egbert Eich wrote:
> Yes, I guess that's OK.

OK... I'll take the bug for commit then...
Comment 5 Roland Mainz 2005-03-05 12:45:03 UTC
Created attachment 2019 [details] [review]
Patch for 2005-03-05-trunk (same as attachment #1905 [details] [review] + Changelog comment)
Comment 6 Roland Mainz 2005-03-05 12:48:25 UTC
Patch checked-in into Xorg trunk...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.795; previous revision: 1.794
/cvs/xorg/xc/programs/Xserver/hw/xfree86/common/xf86Events.c,v  <-- 
xc/programs/Xserver/hw/xfree86/common/xf86Events.c
new revision: 1.7; previous revision: 1.6
Mailing the commit message to xorg-commit@lists.freedesktop.org...

... marking bug as FIXED.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.