//bugs.freedesktop.org/show_bug.cgi?id=2543) attachment #2019     (https://bugs.freedesktop.org/attachment.cgi?id=2019): Fix     |xf86SignalHandler()| which resets the signal handler before setting     the flag indicating a signal has been caught, theoretically allowing     the possibility of infinite recursion. Patch by Andrew Church     <xzilla@achurch.org>.