hw/xfree86/common/xf86Events.c
@@ -49,7 +49,7 @@
  */
 
 /* $XConsortium: xf86Events.c /main/46 1996/10/25 11:36:30 kaleb $ */
-/* $XdotOrg: xc/programs/Xserver/hw/xfree86/common/xf86Events.c,v 1.4 2004/10/11 09:58:04 eich Exp $ */
+/* $XdotOrg: xc/programs/Xserver/hw/xfree86/common/xf86Events.c,v 1.6 2005/01/28 16:12:58 eich Exp $ */
 
 /* [JCH-96/01/21] Extended std reverse map to four buttons. */
 
@@ -1288,9 +1288,9 @@ xf86SigHandler(int signo)
   }
   
   if (xf86SignalIntercept && (*xf86SignalIntercept < 0)) {
+    *xf86SignalIntercept = signo;
     /* Re-arm handler just in case */
     (void) signal(signo, xf86SigHandler);
-    *xf86SignalIntercept = signo;
     return;
   }
 
